syntax = "proto3";
package issuer_pb;

message ProofOfIntegrity {
    string hash = 1;
}